overflow fix

--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,10 @@
 body
 {
     margin:0;
-    width:100vw;
-    height:100vw;
+    width:100%;
+    height:100%;
     overflow:hidden;
+    overscroll-behavior: none;
     background-color: rgb(56, 56, 30);
     font-family: 'Smooch Sans';
 }
